Fixed useless scrollbars

--- a/website/courgette_base_stylesheet.css
+++ b/website/courgette_base_stylesheet.css
@@ -1,4 +1,4 @@
-html, body { height: 100%; width: 100%; margin: 0px; background-color: #e5e5e5;}
+html, body { height: 100%; width: 100%; margin: 0px; background-color: #e5e5e5; overflow-x: hidden; overflow-y: hidden;}
 /*messages list css*/
 .message {
 	background-color: #222222;
@@ -180,10 +180,14 @@ input[type=submit]:hover {
 	position: absolute;
 	left: 0%;
 	top:0%;
+	overflow-y: hidden;
+	overflow-x: hidden;
 }
 
 #profile_tab {
 	background-color:#9aaa57;
+	overflow-y: hidden;
+	overflow-x: hidden;
 	color:white;
 	width:3%;
 	height:100%;
@@ -285,6 +289,7 @@ input[type=submit]:hover {
     right: 0;
     background-color: #111;
     overflow-x: hidden;
+	overflow-y: hidden;
     padding-top: 60px;
     transition: 0.5s;
 }
@@ -298,6 +303,7 @@ input[type=submit]:hover {
     left: 0;
     background-color: #111;
     overflow-x: hidden;
+	overflow-y: hidden;
     padding-top: 60px;
     transition: 0.5s;
 }
